# pi-swarm

./: .gitignore  CHANGELOG.md  CHANGELOG_CN.md  CLAUDE.md  LICENSE  Makefile  README.md  README_CN.md  package.json  pyproject.toml
.github/workflows/: ci.yml
ansible/inventory/: hosts.yml
ansible/playbooks/: join-cluster.yml  leave-cluster.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a8c85140fba9_init_nodes_and_models_tables.py
backend/app/: main.py
backend/app/api/v1/: inference.py  models.py  nodes.py  system.py
backend/app/core/: config.py  scheduler.py
backend/app/engines/: base.py  ollama.py
backend/app/k8s/: __init__.py  client.py
backend/app/models/: __init__.py  model.py  node.py
backend/app/schemas/: inference.py  model.py  node.py
backend/app/services/: inference_service.py  model_service.py  node_service.py
backend/tests/: test_health.py
cli/: pyproject.toml
cli/pi_cli/: client.py  main.py
cli/pi_cli/commands/: inference.py  models.py  nodes.py
docs/superpowers/plans/: 2026-05-31-pi-cluster-llm-plan.md  2026-05-31-pi-swarm-plan.md
docs/superpowers/specs/: 2026-05-31-pi-cluster-llm-design.md  2026-05-31-pi-swarm-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/api/: client.ts
k3s/base/: grafana-deployment.yaml  loki-deployment.yaml  namespace.yaml  ollama-daemonset.yaml  ollama-service.yaml  prometheus-config.yaml  prometheus-deployment.yaml  promtail-daemonset.yaml
scripts/: bench-inference.sh  setup-wsl2.sh
(+12 files in other folders)
